--- a/Practicum_2.1_Opdrachten.ipynb
+++ b/Practicum_2.1_Opdrachten.ipynb
@@ -27,7 +27,22 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\arcde\\AppData\\Local\\Temp\\ipykernel_4600\\4080736814.py:1: DeprecationWarning: \n",
+      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
+      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
+      "but was not found to be installed on your system.\n",
+      "If this would cause problems for you,\n",
+      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
+      "        \n",
+      "  import pandas as pd\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd"
    ]
@@ -61,10 +76,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "geef me je geld\n",
+      "of ik gebruik geweld,\n",
+      "toen kwam de controle aangesneld\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"geef me je geld\\nof ik gebruik geweld,\\ntoen kwam de controle aangesneld\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -77,10 +104,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Apenhoofd\n",
+      "Paardenstaart\n"
+     ]
+    }
+   ],
+   "source": [
+    "aap = \"Apenhoofd\"\n",
+    "paard = \"Paardenstaart\"\n",
+    "print(aap)\n",
+    "print(paard)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -96,10 +137,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A,B,C,D, ...,F,G\n",
+      "Het is inderdaad: \n",
+      "E\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"A,B,C,D, ...,F,G\")\n",
+    "letter = input(\"voer een letter in\")\n",
+    "print(\"Het is inderdaad: \")\n",
+    "print(letter)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -118,10 +174,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Uw inkomen 20 is zeer acceptabel.\n"
+     ]
+    }
+   ],
+   "source": [
+    "inkomen = input(\"voer een inkomen in\")\n",
+    "tekst = \"Uw inkomen \" + inkomen +  \" is zeer acceptabel.\"\n",
+    "print(tekst)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -138,10 +206,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "wat is de basis?\n",
+      "Wat is de hoogte?\n",
+      "De oppervlakte van de driehoek is 6.0 \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"wat is de basis?\")\n",
+    "basis = int(input(\"Voer een basis in.\"))\n",
+    "print(\"Wat is de hoogte?\")\n",
+    "hoogte = int(input(\"Voer een hoogte in.\"))\n",
+    "oppervlakte = 0.5 *(hoogte * basis)\n",
+    "print(f\"De oppervlakte van de driehoek is {oppervlakte} \")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -167,10 +252,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hoe oud is de persoon?\n",
+      "6\n",
+      "Zijn de ouders meegekomen?\n",
+      "J\n",
+      "Waarom neem je nog je ouders mee?\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Hoe oud is de persoon?\")\n",
+    "leeftijd = int(input(\"Voer een leeftijd in.\"))\n",
+    "print(leeftijd)\n",
+    "print(\"Zijn de ouders meegekomen?\")\n",
+    "\n",
+    "ouders_mee = input(\"Ouders mee? J/N\")\n",
+    "print(ouders_mee)\n",
+    "\n",
+    "if leeftijd<6 and ouders_mee == \"J\" :\n",
+    "    print(\"Je mag het zwembad in.\")\n",
+    "if leeftijd<6 and ouders_mee == \"N\" : \n",
+    "    print(\"Je mag het zwembad niet in.\")\n",
+    "if leeftijd>=6 and ouders_mee == \"N\" : \n",
+    "    print(\"Je mag het zwembad in als je een diploma hebt.\")\n",
+    "if leeftijd>=6 and ouders_mee == \"J\" : \n",
+    "    print(\"Waarom neem je nog je ouders mee?\")\n",
+    "\n",
+    "    "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -207,10 +323,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "def wachtwoord(woord1, woord2) : \n",
+    "    if woord1==woord2 : \n",
+    "        return True\n",
+    "    else :\n",
+    "        return False\n",
+    "\n",
+    "\n",
+    "print(wachtwoord(\"Woord\",\"Woord\" ))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -521,7 +654,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
