--- a/Practicum_2.1_Opdrachten.ipynb
+++ b/Practicum_2.1_Opdrachten.ipynb
@@ -378,10 +378,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fout! Probeer het opnieuw. poging 1\n",
+      "Fout! Probeer het opnieuw. poging 2\n",
+      "Fout! Probeer het opnieuw. poging 3\n",
+      "Success!\n"
+     ]
+    }
+   ],
+   "source": [
+    "def wachtwoord():\n",
+    "    \n",
+    "    pogin = 1\n",
+    "\n",
+    "    while True : \n",
+    "        woord1 = input(\"Voer woord 1 in.\")\n",
+    "        woord2 = input(\"Voer woord 2 in.\")\n",
+    "        if woord1 != woord2 :\n",
+    "            print(f\"Fout! Probeer het opnieuw. poging {pogin}\")\n",
+    "            pogin += 1\n",
+    "        else : \n",
+    "            print(\"Success!\")\n",
+    "            break\n",
+    "\n",
+    "\n",
+    "wachtwoord()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -395,18 +423,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "invalid literal for int() with base 10: 'E'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[2], line 11\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mtafels\u001b[39m(getal: \u001b[38;5;28mint\u001b[39m):\n\u001b[0;32m      9\u001b[0m     \u001b[38;5;241m.\u001b[39m\u001b[38;5;241m.\u001b[39m\u001b[38;5;241m.\u001b[39m\n\u001b[1;32m---> 11\u001b[0m x: \u001b[38;5;28mint\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     12\u001b[0m tafels(x)\n",
-      "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: 'E'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Invoer is 4\n",
+      "1 x 1 = 1\n",
+      "2 x 1 = 2\n",
+      "3 x 1 = 3\n",
+      "4 x 1 = 4\n",
+      "5 x 1 = 5\n",
+      "6 x 1 = 6\n",
+      "7 x 1 = 7\n",
+      "8 x 1 = 8\n",
+      "9 x 1 = 9\n",
+      "10 x 1 = 10\n",
+      "1 x 2 = 2\n",
+      "2 x 2 = 4\n",
+      "3 x 2 = 6\n",
+      "4 x 2 = 8\n",
+      "5 x 2 = 10\n",
+      "6 x 2 = 12\n",
+      "7 x 2 = 14\n",
+      "8 x 2 = 16\n",
+      "9 x 2 = 18\n",
+      "10 x 2 = 20\n",
+      "1 x 3 = 3\n",
+      "2 x 3 = 6\n",
+      "3 x 3 = 9\n",
+      "4 x 3 = 12\n",
+      "5 x 3 = 15\n",
+      "6 x 3 = 18\n",
+      "7 x 3 = 21\n",
+      "8 x 3 = 24\n",
+      "9 x 3 = 27\n",
+      "10 x 3 = 30\n",
+      "1 x 4 = 4\n",
+      "2 x 4 = 8\n",
+      "3 x 4 = 12\n",
+      "4 x 4 = 16\n",
+      "5 x 4 = 20\n",
+      "6 x 4 = 24\n",
+      "7 x 4 = 28\n",
+      "8 x 4 = 32\n",
+      "9 x 4 = 36\n",
+      "10 x 4 = 40\n"
      ]
     }
    ],
@@ -419,9 +483,14 @@
     "        teller += 1\n",
     "\n",
     "def tafels(getal: int):\n",
-    "    ...\n",
+    "    begin = 1\n",
+    "    while begin < getal : \n",
+    "        tafel(begin)\n",
+    "        begin += 1\n",
+    "    tafel(getal)\n",
     "\n",
     "x: int = int(input())\n",
+    "print(f\"Invoer is {x}\")\n",
     "tafels(x)"
    ]
   },
