Verder gewerkt aan opdrachten. Volgende gaat over object orientatie. Folder toegevoegd om assets in te bewaren en de opdrachten voor het volgende WC alvast gedownload.

--- a/Practicum_2.1_Opdrachten.ipynb
+++ b/Practicum_2.1_Opdrachten.ipynb
@@ -25,14 +25,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\arcde\\AppData\\Local\\Temp\\ipykernel_4600\\4080736814.py:1: DeprecationWarning: \n",
+      "C:\\Users\\Anthony Delgado\\AppData\\Local\\Temp\\ipykernel_73216\\4080736814.py:1: DeprecationWarning: \n",
       "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
       "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
       "but was not found to be installed on your system.\n",
@@ -293,15 +293,36 @@
    "metadata": {},
    "source": [
     "Schrijf code zodat de boolean-variabelen een en twee aangemaakt worden en waarmee de juiste waarde in de boolean-variabele uitkomst komt te staan. In de waarheidstabel hieronder staat wat de waarde van uitkomst is bij de verschillende mogelijke combinaties van een en twee.<br><br>\n",
-    "<img src=\"Waarheidstabel_1.png\">"
+    "<img src=\"Assets\\Week 2\\Waarheidstabel_1.png\">"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "def waarheidstabel(bool1 : bool, bool2 : bool) :\n",
+    "    if bool1 == True and bool2 == True : \n",
+    "        return True\n",
+    "    if bool1 == True and bool2 == False : \n",
+    "        return False\n",
+    "    if bool1 == False and bool2 == True : \n",
+    "        return True\n",
+    "    if bool1 == False and bool2 == False : \n",
+    "        return True\n",
+    "    \n",
+    "\n",
+    "print(waarheidstabel(True,True))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -350,17 +371,47 @@
    "metadata": {},
    "source": [
     "Schrijf de methode zoekPrins die als parameter een prinses meekrijgt en vervolgens de bijbehorende prins teruggeeft, volgens de volgende tabel:<br><br>\n",
-    "<img src=\"Prinstabel.png\"><br>\n",
+    "<img src=\"Assets\\Week 2\\Prinstabel.png\"><br>\n",
     "Als de naam van de prinses niet in de tabel staat wordt het volgende door de methode teruggegeven: naamloos.<br>\n",
     "Roep ten slotte de gemaakte methode ook daadwerkelijk aan met een zelfgekozen prinsessennaam."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Naamloos\n"
+     ]
+    }
+   ],
+   "source": [
+    "def zoekPrins(prinses : str) :\n",
+    "\n",
+    "    match prinses : \n",
+    "        case \"Aurora\" : \n",
+    "            return \"Philip\"\n",
+    "        case \"Ariël\" : \n",
+    "            return \"Eric\"\n",
+    "        case \"Jasmine\" :\n",
+    "            return \"Aladdin\"\n",
+    "        case  \"Pocahontas\" : \n",
+    "            return \"John\"\n",
+    "        case \"Belle\" : \n",
+    "            return \"Beast\"\n",
+    "        case \"Tiana\" : \n",
+    "            return \"Naveen\"\n",
+    "        case \"Mulan\" : \n",
+    "            return \"Shang\"\n",
+    "        case _ :\n",
+    "            return \"Naamloos\"\n",
+    "        \n",
+    "print(zoekPrins(str(input(\"Voer een prinsessennaam in.\"))))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -423,14 +474,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Invoer is 4\n",
+      "Invoer is 6\n",
       "1 x 1 = 1\n",
       "2 x 1 = 2\n",
       "3 x 1 = 3\n",
@@ -441,6 +492,7 @@
       "8 x 1 = 8\n",
       "9 x 1 = 9\n",
       "10 x 1 = 10\n",
+      "\n",
       "1 x 2 = 2\n",
       "2 x 2 = 4\n",
       "3 x 2 = 6\n",
@@ -451,6 +503,7 @@
       "8 x 2 = 16\n",
       "9 x 2 = 18\n",
       "10 x 2 = 20\n",
+      "\n",
       "1 x 3 = 3\n",
       "2 x 3 = 6\n",
       "3 x 3 = 9\n",
@@ -461,6 +514,7 @@
       "8 x 3 = 24\n",
       "9 x 3 = 27\n",
       "10 x 3 = 30\n",
+      "\n",
       "1 x 4 = 4\n",
       "2 x 4 = 8\n",
       "3 x 4 = 12\n",
@@ -470,7 +524,29 @@
       "7 x 4 = 28\n",
       "8 x 4 = 32\n",
       "9 x 4 = 36\n",
-      "10 x 4 = 40\n"
+      "10 x 4 = 40\n",
+      "\n",
+      "1 x 5 = 5\n",
+      "2 x 5 = 10\n",
+      "3 x 5 = 15\n",
+      "4 x 5 = 20\n",
+      "5 x 5 = 25\n",
+      "6 x 5 = 30\n",
+      "7 x 5 = 35\n",
+      "8 x 5 = 40\n",
+      "9 x 5 = 45\n",
+      "10 x 5 = 50\n",
+      "\n",
+      "1 x 6 = 6\n",
+      "2 x 6 = 12\n",
+      "3 x 6 = 18\n",
+      "4 x 6 = 24\n",
+      "5 x 6 = 30\n",
+      "6 x 6 = 36\n",
+      "7 x 6 = 42\n",
+      "8 x 6 = 48\n",
+      "9 x 6 = 54\n",
+      "10 x 6 = 60\n"
      ]
     }
    ],
@@ -486,6 +562,7 @@
     "    begin = 1\n",
     "    while begin < getal : \n",
     "        tafel(begin)\n",
+    "        print()\n",
     "        begin += 1\n",
     "    tafel(getal)\n",
     "\n",
@@ -510,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -526,8 +603,7 @@
       "huidige getal: 6\n",
       "huidige getal: 7\n",
       "huidige getal: 8\n",
-      "huidige getal: 9\n",
-      "huidige getal: 10\n"
+      "huidige getal: 9\n"
      ]
     }
    ],
@@ -535,7 +611,7 @@
     "def loopje():\n",
     "    aantal = 0\n",
     "\n",
-    "    while(aantal <= 10):\n",
+    "    for aantal in range( 10 ) :\n",
     "        print(f\"huidige getal: {aantal}\")\n",
     "        aantal += 1\n",
     "\n",
@@ -551,10 +627,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Er waren 5 even getallen.\n"
+     ]
+    }
+   ],
    "source": [
+    "def checkEven() :\n",
+    "\n",
+    "    begin = 0\n",
+    "    evenNumber = 0\n",
+    "    for begin in range (12) :\n",
+    "        invoer = int(input(f\"Voer getal {begin + 1} in\"))\n",
+    "        if invoer % 2 == 0 :\n",
+    "            evenNumber += 1\n",
+    "    print(f\"Er waren {evenNumber} even getallen.\")\n",
     "\n",
     "\n",
     "checkEven()"
