--- a/Practicum_2.1_Opdrachten.ipynb
+++ b/Practicum_2.1_Opdrachten.ipynb
@@ -677,7 +677,26 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Kledingstuk :\n",
+    "    def _init_(self, merk : str, maat : int, prijs : float ) :\n",
+    "        self.merk = merk\n",
+    "        self.maat = maat\n",
+    "        self.prijs = prijs\n",
+    "        \n",
+    "\n",
+    "class Broek(Kledingstuk) :\n",
+    "    pass\n",
+    "\n",
+    "class Shirt(Kledingstuk) : \n",
+    "    pass\n",
+    "\n",
+    "class Spijkerbroek(Broek) : \n",
+    "    pass\n",
+    "\n",
+    "class Poloshirt(Shirt) : \n",
+    "    pass"
+   ]
   },
   {
    "cell_type": "markdown",
