--- a/Practicum_2.2_Opdrachten.ipynb
+++ b/Practicum_2.2_Opdrachten.ipynb
@@ -3,11 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Practicumopdrachten Week 2.2 (eerste kans)"
@@ -30,12 +26,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'numpy'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[4], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mwarnings\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01msqlite3\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'numpy'"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "import warnings\n",
+    "import numpy as np\n",
+    "import sqlite3\n",
+    "import pandas as pd\n",
     "warnings.simplefilter('ignore')"
    ]
   },
@@ -62,10 +73,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "con = sqlite3.connect(\"Assets/Week 2/go_sales.sqlite\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -76,12 +89,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "sql_query = \"SELECT name FROM sqlite_master WHERE type='table';\"\n",
-    "#Vul dit codeblok verder in"
+    "#Vul dit codeblok verder in\n",
+    "def discoverTables() :\n",
+    "    try :\n",
+    "        con = sqlite3.connect(\"Assets/Week 2/go_sales.sqlite\")\n",
+    "        cursor = con.cursor() \n",
+    "        print(\"Connected to sqlite.\")\n",
+    "        cursor.execute(sql_query)\n",
+    "        records = cursor.fetchall()\n",
+    "        print(\"Total rows are:  \", len(records))\n",
+    "        for row in records : \n",
+    "            print(f\"    {row}\")\n",
+    "    except sqlite3.Error as error:\n",
+    "        print(\"Failed to read data from sqlite table\", error)\n",
+    "    finally:\n",
+    "        if con:\n",
+    "            con.close()\n",
+    "            print(\"The SQLite connection is now closed.\")\n",
+    "\n",
+    "discoverTables()"
    ]
   },
   {
@@ -97,7 +128,25 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "sql_query = \"SELECT * FROM sales_staff;\"\n",
+    "\n",
+    "def dataframe() : \n",
+    "    try : \n",
+    "        con = sqlite3.connect(\"Assets/Week 2/go_sales.sqlite\")\n",
+    "        cursor = con.cursor() \n",
+    "        print(\"Connected to sqlite.\")\n",
+    "        result = pd.read_sql_query(sql_query,con)\n",
+    "        print(result)\n",
+    "    except sqlite3.Error as error: \n",
+    "        print(\"Failed to read data from sqlite table\", error)\n",
+    "    finally : \n",
+    "        if con:\n",
+    "            con.close()\n",
+    "            print(\"The SQLite connection is now closed.\")\n",
+    "\n",
+    "dataframe()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -125,7 +174,57 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "sql_query = \"SELECT * FROM sales_staff;\"\n",
+    "global sales_staff_column \n",
+    "global work_phone_column\n",
+    "global extension_column\n",
+    "global fax_column\n",
+    "global email_column\n",
+    "\n",
+    "\n",
+    "def go_sales_series() : \n",
+    "   try : \n",
+    "        con = sqlite3.connect(\"Assets/Week 2/go_sales.sqlite\")\n",
+    "        cursor = con.cursor() \n",
+    "        print(\"Connected to sqlite.\")\n",
+    "        result =  pd.read_sql_query(sql_query,con)\n",
+    "\n",
+    "        global sales_staff_column \n",
+    "        sales_staff_column = result[\"SALES_STAFF_CODE\"]\n",
+    "\n",
+    "        global work_phone_column\n",
+    "        work_phone_column = result[\"WORK_PHONE\"]\n",
+    "\n",
+    "        global extension_column\n",
+    "        extension_column = result[\"EXTENSION\"]\n",
+    "\n",
+    "        global fax_column\n",
+    "        fax_column = result[\"FAX\"]\n",
+    "\n",
+    "        global email_column\n",
+    "        email_column = result[\"EMAIL\"]\n",
+    "\n",
+    "        db_series = (sales_staff_column,work_phone_column,extension_column,fax_column,email_column)\n",
+    "        #print(db_series)\n",
+    "\n",
+    "        #print(result)\n",
+    "        # print(sales_staff_column)\n",
+    "   except sqlite3.Error as error: \n",
+    "       print(\"Failed to read data from sqlite table\", error)\n",
+    "   finally : \n",
+    "        if con:\n",
+    "            con.close()\n",
+    "            print(\"The SQLite connection is now closed.\")\n",
+    "\n",
+    "go_sales_series()\n",
+    "\n",
+    "#print(sales_staff_column)\n",
+    "#print(work_phone_column)\n",
+    "#print(extension_column)\n",
+    "#print(fax_column)\n",
+    "#print(email_column)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -140,7 +239,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# print(sales_staff_column)\n",
+    "# print(work_phone_column)\n",
+    "# print(extension_column)\n",
+    "# print(fax_column)\n",
+    "# print(email_column)\n",
+    "\n",
+    "\n",
+    "\n",
+    "contact_details = pd.concat([sales_staff_column,work_phone_column,extension_column,fax_column,email_column], axis=1)\n",
+    "print(contact_details)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -163,7 +273,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# print(contact_details.head(5))\n",
+    "top5_contactdetails = pd.DataFrame(contact_details.head(5))\n",
+    "print(top5_contactdetails)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -180,7 +294,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "language_column = pd.Series([\"EN\",\"EN\",\"EN\",\"EN\",\"EN\"], name=\"FIRST_LANGUAGE\")\n",
+    "truncated_Contact = pd.concat([top5_contactdetails,language_column], axis=1)\n",
+    "print(truncated_Contact)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -196,10 +314,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m second_language_column \u001b[38;5;241m=\u001b[39m \u001b[43mpd\u001b[49m\u001b[38;5;241m.\u001b[39mSeries({\u001b[38;5;241m0\u001b[39m:\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFR\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;241m1\u001b[39m:\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFR\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;241m2\u001b[39m:\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFR\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;241m3\u001b[39m:\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDE\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;241m4\u001b[39m:\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDE\u001b[39m\u001b[38;5;124m\"\u001b[39m}, name\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSECOND_LANGUAGE\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      2\u001b[0m truncated_Contact \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mconcat([truncated_Contact, second_language_column], axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(truncated_Contact)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'pd' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "second_language_column = pd.Series({0:\"FR\", 1:\"FR\",2:\"FR\",3:\"DE\",4:\"DE\"}, name=\"SECOND_LANGUAGE\")\n",
+    "truncated_Contact = pd.concat([truncated_Contact, second_language_column], axis=1)\n",
+    "print(truncated_Contact)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -215,10 +349,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m third_language_column \u001b[38;5;241m=\u001b[39m \u001b[43mpd\u001b[49m\u001b[38;5;241m.\u001b[39mSeries({\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTHIRD_LANGUAGE\u001b[39m\u001b[38;5;124m\"\u001b[39m:[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNL\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNL\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mJPN\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mJPN\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mKOR\u001b[39m\u001b[38;5;124m\"\u001b[39m]})\n\u001b[0;32m      2\u001b[0m df_third_lang \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame(third_language_column)\n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m# print(df_third_lang)\u001b[39;00m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'pd' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "third_language_column = pd.Series({\"THIRD_LANGUAGE\":[\"NL\",\"NL\",\"JPN\",\"JPN\",\"KOR\"]})\n",
+    "df_third_lang = pd.DataFrame(third_language_column)\n",
+    "# print(df_third_lang)\n",
+    "truncated_Contact = pd.concat([truncated_Contact,df_third_lang], axis=1)\n",
+    "print(truncated_Contact)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -479,7 +631,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
