--- a/Practicum_2.1_Opdrachten.ipynb
+++ b/Practicum_2.1_Opdrachten.ipynb
@@ -730,19 +730,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n",
-      "2\n"
+      "['Jelle', 'Marleen', 'Fatime', 'Jelle', 'Henk']\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "mijn_lijst = [\"Jelle\",\"Marleen\",\"Fatime\",\"Jelle\",\"Henk\"]\n",
+    "print(mijn_lijst)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -753,10 +755,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Hans', 'Marleen', 'Fatime', 'Jelle', 'Henk']\n"
+     ]
+    }
+   ],
+   "source": [
+    "andere_naam = mijn_lijst \n",
+    "andere_naam[0] = \"Hans\"\n",
+    "print(andere_naam)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -767,10 +781,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('Jelle', 'Marleen', 'Fatime', 'Jelle', 'Henk')\n"
+     ]
+    }
+   ],
+   "source": [
+    "mijn_tupel = (\"Jelle\",\"Marleen\",\"Fatime\",\"Jelle\",\"Henk\")\n",
+    "print(mijn_tupel)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -781,10 +806,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'tuple' object does not support item assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[4], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m andere_tupel \u001b[38;5;241m=\u001b[39m mijn_tupel\n\u001b[1;32m----> 2\u001b[0m \u001b[43mandere_tupel\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mHans\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(andere_tupel)\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'tuple' object does not support item assignment"
+     ]
+    }
+   ],
+   "source": [
+    "andere_tupel = mijn_tupel\n",
+    "andere_tupel[0] = \"Hans\"\n",
+    "print(andere_tupel)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -799,10 +840,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'naam': 'Jelle', 'leeftijd': 28, 'beroep': 'Docent', 'hobby': 'Volleybal'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "mijn_dictionary = {\n",
+    "\"naam\": \"Jelle\",\n",
+    "\"leeftijd\": 28,\n",
+    "\"beroep\": \"Docent\",\n",
+    "\"hobby\": \"Volleybal\"\n",
+    "}\n",
+    "print(mijn_dictionary)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -813,10 +870,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'naam': 'Hans', 'leeftijd': 28, 'beroep': 'Docent', 'hobby': 'Volleybal'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "andere_dictionary = mijn_dictionary\n",
+    "andere_dictionary[\"naam\"] = \"Hans\"\n",
+    "print(andere_dictionary)"
+   ]
   }
  ],
  "metadata": {
