--- a/Practicum_2.2_Opdrachten.ipynb
+++ b/Practicum_2.2_Opdrachten.ipynb
@@ -515,33 +515,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  SALES_STAFF_CODE           WORK_PHONE EXTENSION                  FAX  \\\n",
-      "0              100  +358(0)17 - 433 127       825  +358(0)17 - 433 129   \n",
-      "1              101        82-2-778-6587      1228        82-2-778-6586   \n",
-      "2              102        82-2-778-6587      2641        82-2-778-6586   \n",
-      "3              103      886-2-2975-1988      1541      886-2-2989-4978   \n",
-      "4              104      886-2-2975-1988      2311      886-2-2989-4978   \n",
-      "\n",
-      "                     EMAIL  \n",
-      "0  TSavolainen@grtd123.com  \n",
-      "1         CKim@grtd123.com  \n",
-      "2        JChoi@grtd123.com  \n",
-      "3        KKwao@grtd123.com  \n",
-      "4         CFon@grtd123.com  \n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>SALES_STAFF_CODE</th>\n",
+       "      <th>WORK_PHONE</th>\n",
+       "      <th>EXTENSION</th>\n",
+       "      <th>FAX</th>\n",
+       "      <th>EMAIL</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>100</td>\n",
+       "      <td>+358(0)17 - 433 127</td>\n",
+       "      <td>825</td>\n",
+       "      <td>+358(0)17 - 433 129</td>\n",
+       "      <td>TSavolainen@grtd123.com</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>101</td>\n",
+       "      <td>82-2-778-6587</td>\n",
+       "      <td>1228</td>\n",
+       "      <td>82-2-778-6586</td>\n",
+       "      <td>CKim@grtd123.com</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>102</td>\n",
+       "      <td>82-2-778-6587</td>\n",
+       "      <td>2641</td>\n",
+       "      <td>82-2-778-6586</td>\n",
+       "      <td>JChoi@grtd123.com</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>103</td>\n",
+       "      <td>886-2-2975-1988</td>\n",
+       "      <td>1541</td>\n",
+       "      <td>886-2-2989-4978</td>\n",
+       "      <td>KKwao@grtd123.com</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>104</td>\n",
+       "      <td>886-2-2975-1988</td>\n",
+       "      <td>2311</td>\n",
+       "      <td>886-2-2989-4978</td>\n",
+       "      <td>CFon@grtd123.com</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  SALES_STAFF_CODE           WORK_PHONE EXTENSION                  FAX  \\\n",
+       "0              100  +358(0)17 - 433 127       825  +358(0)17 - 433 129   \n",
+       "1              101        82-2-778-6587      1228        82-2-778-6586   \n",
+       "2              102        82-2-778-6587      2641        82-2-778-6586   \n",
+       "3              103      886-2-2975-1988      1541      886-2-2989-4978   \n",
+       "4              104      886-2-2975-1988      2311      886-2-2989-4978   \n",
+       "\n",
+       "                     EMAIL  \n",
+       "0  TSavolainen@grtd123.com  \n",
+       "1         CKim@grtd123.com  \n",
+       "2        JChoi@grtd123.com  \n",
+       "3        KKwao@grtd123.com  \n",
+       "4         CFon@grtd123.com  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
     "# print(contact_details.head(5))\n",
     "top5_contactdetails = pd.DataFrame(contact_details.head(5))\n",
-    "print(top5_contactdetails)"
+    "display(top5_contactdetails)"
    ]
   },
   {
