Antwoord op opdracht aangepast.

--- a/Practicum_2.3_Opdrachten.ipynb
+++ b/Practicum_2.3_Opdrachten.ipynb
@@ -24,14 +24,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Anthony Delgado\\AppData\\Local\\Temp\\ipykernel_82348\\476482988.py:4: DeprecationWarning: \n",
+      "C:\\Users\\Anthony Delgado\\AppData\\Local\\Temp\\ipykernel_116580\\476482988.py:4: DeprecationWarning: \n",
       "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
       "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
       "but was not found to be installed on your system.\n",
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
      "output_type": "stream",
      "text": [
       "Connected to sqlite.\n",
-      "<sqlite3.Connection object at 0x000002D974BBD6C0>\n"
+      "<sqlite3.Connection object at 0x0000020E860DD7B0>\n"
      ]
     }
    ],
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -552,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -634,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -735,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -845,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -932,7 +932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1022,7 +1022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1046,7 +1046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1075,7 +1075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1150,7 +1150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1174,7 +1174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1206,7 +1206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1306,7 +1306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1442,7 +1442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1633,7 +1633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1727,7 +1727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1799,7 +1799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1890,7 +1890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -2016,7 +2016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -2125,7 +2125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -2213,7 +2213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -2390,7 +2390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -2569,7 +2569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -2704,14 +2704,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*deze opdracht kan niet gemaakt worden. De tabel SalesTARGETData heeft alleen jaren 2020,2021 en 2022 in de kolom SALES_YEAR*"
+    "~~*deze opdracht kan niet gemaakt worden. De tabel SalesTARGETData heeft alleen jaren 2020,2021 en 2022 in de kolom SALES_YEAR*~~\n",
+    "*Dit moet kennelijk het hoogste verkooptarget uit 2022 zijn.*"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Max_Target    4\n",
+      "MIN_TARGET    4\n",
+      "dtype: int64\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -2733,98 +2743,53 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>Max_Target</th>\n",
+       "      <th>MIN_TARGET</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>FIRST_NAME</th>\n",
        "      <th>LAST_NAME</th>\n",
-       "      <th>SALES_YEAR</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>14205</th>\n",
-       "      <td>Belinda</td>\n",
-       "      <td>Jansen-Velasquez</td>\n",
-       "      <td>2020</td>\n",
+       "      <th>Belinda</th>\n",
+       "      <th>Jansen-Velasquez</th>\n",
+       "      <td>963</td>\n",
+       "      <td>1005</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>14206</th>\n",
-       "      <td>Belinda</td>\n",
-       "      <td>Jansen-Velasquez</td>\n",
-       "      <td>2020</td>\n",
+       "      <th>Ellen</th>\n",
+       "      <th>Shapiro</th>\n",
+       "      <td>986</td>\n",
+       "      <td>1004</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>14207</th>\n",
-       "      <td>Belinda</td>\n",
-       "      <td>Jansen-Velasquez</td>\n",
-       "      <td>2020</td>\n",
+       "      <th>Jan</th>\n",
+       "      <th>Haverkamp</th>\n",
+       "      <td>993</td>\n",
+       "      <td>1048</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>14208</th>\n",
-       "      <td>Belinda</td>\n",
-       "      <td>Jansen-Velasquez</td>\n",
-       "      <td>2020</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14209</th>\n",
-       "      <td>Belinda</td>\n",
-       "      <td>Jansen-Velasquez</td>\n",
-       "      <td>2020</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16810</th>\n",
-       "      <td>Maria</td>\n",
-       "      <td>Laponder</td>\n",
-       "      <td>2022</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16811</th>\n",
-       "      <td>Maria</td>\n",
-       "      <td>Laponder</td>\n",
-       "      <td>2022</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16812</th>\n",
-       "      <td>Maria</td>\n",
-       "      <td>Laponder</td>\n",
-       "      <td>2022</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16813</th>\n",
-       "      <td>Maria</td>\n",
-       "      <td>Laponder</td>\n",
-       "      <td>2022</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16814</th>\n",
-       "      <td>Maria</td>\n",
-       "      <td>Laponder</td>\n",
-       "      <td>2022</td>\n",
+       "      <th>Maria</th>\n",
+       "      <th>Laponder</th>\n",
+       "      <td>9956</td>\n",
+       "      <td>1000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2610 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      FIRST_NAME         LAST_NAME SALES_YEAR\n",
-       "14205    Belinda  Jansen-Velasquez       2020\n",
-       "14206    Belinda  Jansen-Velasquez       2020\n",
-       "14207    Belinda  Jansen-Velasquez       2020\n",
-       "14208    Belinda  Jansen-Velasquez       2020\n",
-       "14209    Belinda  Jansen-Velasquez       2020\n",
-       "...          ...               ...        ...\n",
-       "16810      Maria          Laponder       2022\n",
-       "16811      Maria          Laponder       2022\n",
-       "16812      Maria          Laponder       2022\n",
-       "16813      Maria          Laponder       2022\n",
-       "16814      Maria          Laponder       2022\n",
-       "\n",
-       "[2610 rows x 3 columns]"
+       "                            Max_Target MIN_TARGET\n",
+       "FIRST_NAME LAST_NAME                             \n",
+       "Belinda    Jansen-Velasquez        963       1005\n",
+       "Ellen      Shapiro                 986       1004\n",
+       "Jan        Haverkamp               993       1048\n",
+       "Maria      Laponder               9956       1000"
       ]
      },
      "metadata": {},
@@ -2836,14 +2801,15 @@
     "    staff_branch = pd.merge(sales_staff,sales_branch,left_on=\"SALES_BRANCH_CODE\",how=\"left\",right_on=\"SALES_BRANCH_CODE\")\n",
     "    staff_branch_targets = pd.merge(staff_branch,target,left_on=\"SALES_STAFF_CODE\",how=\"left\",right_on=\"SALES_STAFF_CODE\")\n",
     "    city_filter = (staff_branch_targets[\"CITY\"] == \"Amsterdam\")\n",
-    "    year_filter = (staff_branch_targets[\"SALES_YEAR\"] == 2006)\n",
-    "    staff_branch_targets_cityFiltered = staff_branch_targets.loc[(city_filter),[\"FIRST_NAME\",\"LAST_NAME\",\"SALES_YEAR\"]]\n",
+    "    year_filter = (staff_branch_targets[\"SALES_YEAR\"] == \"2022\")\n",
+    "    staff_branch_targets_cityFiltered = staff_branch_targets.loc[(city_filter),[\"FIRST_NAME\",\"LAST_NAME\",\"SALES_YEAR\",\"SALES_TARGET\"]]\n",
     "    staff_branch_targets_yearFiltered = staff_branch_targets_cityFiltered.loc[(year_filter),:]\n",
+    "    staff_branch_targets_aggregate = staff_branch_targets_yearFiltered.groupby([\"FIRST_NAME\",\"LAST_NAME\"]).aggregate(Max_Target=(\"SALES_TARGET\",\"max\"),MIN_TARGET=(\"SALES_TARGET\",\"min\"))\n",
     "    \n",
     "\n",
     "\n",
-    "\n",
-    "    display(staff_branch_targets_cityFiltered)\n",
+    "    print(staff_branch_targets_aggregate.count())\n",
+    "    display(staff_branch_targets_aggregate)\n",
     "\n",
     "salesStaff_Amsterdam_2006Targets()"
    ]
@@ -2864,7 +2830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -3000,7 +2966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -3219,7 +3185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -3290,7 +3256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -3427,7 +3393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -3564,7 +3530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -3573,7 +3539,7 @@
        "2024"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3592,7 +3558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -3601,7 +3567,7 @@
        "2013"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3633,7 +3599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
