For loop op Lang/Kort in dienst aangepast.

--- a/Practicum_2.3_Opdrachten.ipynb
+++ b/Practicum_2.3_Opdrachten.ipynb
@@ -31,7 +31,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Anthony Delgado\\AppData\\Local\\Temp\\ipykernel_116580\\476482988.py:4: DeprecationWarning: \n",
+      "C:\\Users\\Anthony Delgado\\AppData\\Local\\Temp\\ipykernel_131940\\476482988.py:4: DeprecationWarning: \n",
       "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
       "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
       "but was not found to be installed on your system.\n",
@@ -82,7 +82,7 @@
      "output_type": "stream",
      "text": [
       "Connected to sqlite.\n",
-      "<sqlite3.Connection object at 0x0000020E860DD7B0>\n"
+      "<sqlite3.Connection object at 0x000002195662E2F0>\n"
      ]
     }
    ],
@@ -2710,7 +2710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -3599,7 +3599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -3676,12 +3676,12 @@
        "    <tr>\n",
        "      <th>29</th>\n",
        "      <td>Winkler</td>\n",
-       "      <td>Kort in dienst</td>\n",
+       "      <td>Lang in dienst</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>69</th>\n",
        "      <td>Wright</td>\n",
-       "      <td>Kort in dienst</td>\n",
+       "      <td>Lang in dienst</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -3699,8 +3699,8 @@
        "20   Wiesinger  Kort in dienst\n",
        "57      Wilcox  Kort in dienst\n",
        "9   Willoughby  Kort in dienst\n",
-       "29     Winkler  Kort in dienst\n",
-       "69      Wright  Kort in dienst\n",
+       "29     Winkler  Lang in dienst\n",
+       "69      Wright  Lang in dienst\n",
        "\n",
        "[102 rows x 2 columns]"
       ]
@@ -3715,11 +3715,13 @@
     "        years = sales_staff.at[index, \"DATE_HIRED\"]\n",
     "        format = datetime.strptime(years, date_format)\n",
     "        years_employed = format.year \n",
+    "        employee = sales_staff.at[index,\"DATE_HIRED\"]\n",
     "\n",
-    "        if( (date.today().year-years_employed)<25):\n",
-    "            sales_staff.at[index,\"DUUR_DIENST\"] = \"Kort in dienst\"\n",
-    "        elif((date.today().year-years_employed)>=12):\n",
+    "        if((date.today().year-years_employed)>=12):\n",
     "            sales_staff.at[index,\"DUUR_DIENST\"] = \"Lang in dienst\"\n",
+    "        else :\n",
+    "            sales_staff.at[index,\"DUUR_DIENST\"] = \"Kort in dienst\"\n",
+    "   \n",
     "    sales_staff_filtered = (sales_staff.loc[:,[\"LAST_NAME\",\"DUUR_DIENST\"]]).sort_values(by=[\"LAST_NAME\"])\n",
     "    display(sales_staff_filtered)\n",
     "\n",
