--- a/Practicum_3.1_Opdrachten.ipynb
+++ b/Practicum_3.1_Opdrachten.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,27 +50,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[3 2 2 2 7 0 1 9 3 0 6 8 1 4 6 4 6 0 4 2]\n",
-      "[8 4 8 6 7 7 6 6 1 6 3 0 3 0 5 4 5 2 7 9]\n",
-      "[4 9 8 3 0 4 6 1 1 7 6 2 2 0 9 3 1 2 3 5]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "array1 = np.random.randint(10, size=(20)) \n",
-    "array2 = np.random.randint(10, size=(20)) \n",
-    "array3 = np.random.randint(10, size=(20)) \n",
+    "global unsorted_array1 \n",
+    "unsorted_array1 = tuple(np.random.randint(10, size=(20)))\n",
     "\n",
-    "print(array1)\n",
-    "print(array2)\n",
-    "print(array3)"
+    "global unsorted_array2\n",
+    "unsorted_array2 = tuple(np.random.randint(10, size=(20)))\n",
+    "\n",
+    "global unsorted_array3\n",
+    "unsorted_array3 = tuple(np.random.randint(10, size=(20)))"
    ]
   },
   {
@@ -98,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +107,118 @@
     "            array[j] = temp\n",
     "        k -= 1\n",
     "        interval = 2**k -1\n",
-    "    return array"
+    "    return array\n",
+    "\n",
+    "def shellSortResults() : \n",
+    "    array1 = list(unsorted_array1)\n",
+    "    array2 = list(unsorted_array2)\n",
+    "    array3 = list(unsorted_array3)\n",
+    "\n",
+    "    print(\"SHELL SORT\")\n",
+    "    print(shellSort(array1))\n",
+    "    print(shellSort(array2))\n",
+    "    print(shellSort(array3))\n",
+    "    print(\"-----------------\")\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Merge sort"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mergeSort(nums):\n",
+    "    if len(nums)==1:\n",
+    "        return nums\n",
+    "    mid = (len(nums)-1) // 2\n",
+    "    lst1 = mergeSort(nums[:mid+1])\n",
+    "    lst2 = mergeSort(nums[mid+1:])\n",
+    "    result = merge(lst1, lst2)\n",
+    "    return result\n",
+    "def merge(lst1, lst2):\n",
+    "    lst = []\n",
+    "    i = 0\n",
+    "    j = 0\n",
+    "    while(i<=len(lst1)-1 and j<=len(lst2)-1):\n",
+    "        if lst1[i]<lst2[j]:\n",
+    "            lst.append(lst1[i])\n",
+    "            i+=1\n",
+    "        else:\n",
+    "            lst.append(lst2[j])\n",
+    "            j+=1\n",
+    "    if i>len(lst1)-1:\n",
+    "        while(j<=len(lst2)-1):\n",
+    "            lst.append(lst2[j])\n",
+    "            j+=1\n",
+    "    else:\n",
+    "        while(i<=len(lst1)-1):\n",
+    "            lst.append(lst1[i])\n",
+    "            i+=1\n",
+    "    return lst\n",
+    "\n",
+    "def mergeSortResults() : \n",
+    "    array1 = list(unsorted_array1)\n",
+    "    array2 = list(unsorted_array2)\n",
+    "    array3 = list(unsorted_array3)\n",
+    "\n",
+    "    print()\n",
+    "    print(\"MERGE SORT\")\n",
+    "    print(f\"Unsorted array1 : {unsorted_array1}\")\n",
+    "    print(f\"Sorted : {mergeSort(array1)}\")\n",
+    "    print(f\"Unsorted array2 : {unsorted_array2}\")\n",
+    "    print(f\"Sorted : {mergeSort(array2)}\")\n",
+    "    print(f\"Unsorted array3 : {unsorted_array3}\")\n",
+    "    print(f\"Sorted : {mergeSort(array3)}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Bubble sort"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def bubbleSort(array):\n",
+    "    #houd bij of de twee elementen verwisseld zijn\n",
+    "    swapped = False\n",
+    "    #loop over de hele array\n",
+    "    for i in range(len(array)-1,0,-1):\n",
+    "        #voor elk element in de iteratie\n",
+    "        for j in range(i):\n",
+    "            #check of element i groter is dan het volgende element\n",
+    "            if array[j]>array[j+1]:\n",
+    "                #als groter, verwissel\n",
+    "                array[j], array[j+1] = array[j+1], array[j]\n",
+    "                #de twee elementen zijn verwisseld\n",
+    "                swapped= True\n",
+    "        if swapped:\n",
+    "            swapped=False\n",
+    "\n",
+    "        else:\n",
+    "            #als de twee elementen niet verwisseld zijn (swapped=False),\n",
+    "            # dan is er niks meer om te sorteren en wordt de loop gebroken\n",
+    "            break\n",
+    "    return array\n",
+    "\n",
+    "\n",
+    "def bubbleSortResults() :\n",
+    "    array1 = list(unsorted_array1)\n",
+    "    array2 = list(unsorted_array2)\n",
+    "    array3 = list(unsorted_array3)    "
    ]
   },
   {
@@ -128,29 +230,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "UNSORTED ARRAYS\n",
+      "(6, 0, 6, 3, 4, 3, 2, 5, 2, 0, 0, 6, 5, 9, 2, 1, 6, 0, 5, 5)\n",
+      "(4, 3, 4, 0, 1, 6, 7, 1, 2, 9, 4, 2, 3, 0, 4, 9, 3, 2, 5, 8)\n",
+      "(9, 5, 4, 2, 7, 3, 0, 4, 5, 3, 4, 3, 1, 2, 3, 1, 7, 9, 4, 1)\n",
+      "\n",
       "SHELL SORT\n",
-      "[0 0 0 1 1 2 2 2 2 3 3 4 4 4 6 6 6 7 8 9]\n",
-      "[0 0 1 2 3 3 4 4 5 5 6 6 6 6 7 7 7 8 8 9]\n",
-      "[0 0 1 1 1 2 2 2 3 3 3 4 4 5 6 6 7 8 9 9]\n",
-      "-----------------\n"
+      "[0, 0, 0, 0, 1, 2, 2, 2, 3, 3, 4, 5, 5, 5, 5, 6, 6, 6, 6, 9]\n",
+      "[0, 0, 1, 1, 2, 2, 2, 3, 3, 3, 4, 4, 4, 4, 5, 6, 7, 8, 9, 9]\n",
+      "[0, 1, 1, 1, 2, 2, 3, 3, 3, 3, 4, 4, 4, 4, 5, 5, 7, 7, 9, 9]\n",
+      "-----------------\n",
+      "\n",
+      "MERGE SORT\n",
+      "Unsorted array1 : (6, 0, 6, 3, 4, 3, 2, 5, 2, 0, 0, 6, 5, 9, 2, 1, 6, 0, 5, 5)\n",
+      "Sorted : [0, 0, 0, 0, 1, 2, 2, 2, 3, 3, 4, 5, 5, 5, 5, 6, 6, 6, 6, 9]\n",
+      "Unsorted array2 : (4, 3, 4, 0, 1, 6, 7, 1, 2, 9, 4, 2, 3, 0, 4, 9, 3, 2, 5, 8)\n",
+      "Sorted : [0, 0, 1, 1, 2, 2, 2, 3, 3, 3, 4, 4, 4, 4, 5, 6, 7, 8, 9, 9]\n",
+      "Unsorted array3 : (9, 5, 4, 2, 7, 3, 0, 4, 5, 3, 4, 3, 1, 2, 3, 1, 7, 9, 4, 1)\n",
+      "Sorted : [0, 1, 1, 1, 2, 2, 3, 3, 3, 3, 4, 4, 4, 4, 5, 5, 7, 7, 9, 9]\n"
      ]
     }
    ],
    "source": [
+    "print(\"UNSORTED ARRAYS\")\n",
+    "print(unsorted_array1)\n",
+    "print(unsorted_array2)\n",
+    "print(unsorted_array3)\n",
+    "print()\n",
     "\n",
-    "print(\"SHELL SORT\")\n",
-    "print(shellSort(array1))\n",
-    "print(shellSort(array2))\n",
-    "print(shellSort(array3))\n",
-    "print(\"-----------------\")\n",
-    "print()\n"
+    "shellSortResults()\n",
+    "mergeSortResults()\n"
    ]
   },
   {
@@ -165,7 +281,8 @@
    "metadata": {},
    "source": [
     "1. Rathore, A. S. (2023, January 22). Sorting algorithms — with Python - towards data science. Medium. https://towardsdatascience.com/sorting-algorithms-with-python-4ec7081d78a1 \n",
-    "2. GfG. (2023, January 10). ShellSort. GeeksforGeeks. https://www.geeksforgeeks.org/shellsort/ "
+    "2. GfG. (2023, January 10). ShellSort. GeeksforGeeks. https://www.geeksforgeeks.org/shellsort/ \n",
+    "3. GfG. (2023, March 30). Introduction to sorting techniques data structure and algorithm tutorials. GeeksforGeeks. https://www.geeksforgeeks.org/introduction-to-sorting-algorithm/ "
    ]
   }
  ],
