--- a/Practicum_3.1_Opdrachten.ipynb
+++ b/Practicum_3.1_Opdrachten.ipynb
@@ -68,7 +68,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Sorteer algoritme methodes"
+    "### Sorteer algoritme methodes\n",
+    "\n",
+    "Lijst van sorteer algoritmes: \n",
+    "1. Bubble\n",
+    "2. Gnome\n",
+    "3. Selection\n",
+    "4. Odd Even\n",
+    "5. Comb\n",
+    "6. Bogo\n",
+    "7. LSD Radix\n",
+    "8. Shell\n",
+    "9. Schwartzian Transform\n",
+    "10. Bucket\n",
+    "11. Bingo\n",
+    "12. Pancake"
    ]
   },
   {
@@ -138,11 +152,13 @@
     "def mergeSort(nums):\n",
     "    if len(nums)==1:\n",
     "        return nums\n",
+    "    #pak het midden van het array\n",
     "    mid = (len(nums)-1) // 2\n",
     "    lst1 = mergeSort(nums[:mid+1])\n",
     "    lst2 = mergeSort(nums[mid+1:])\n",
     "    result = merge(lst1, lst2)\n",
     "    return result\n",
+    "\n",
     "def merge(lst1, lst2):\n",
     "    lst = []\n",
     "    i = 0\n",
@@ -188,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +234,15 @@
     "def bubbleSortResults() :\n",
     "    array1 = list(unsorted_array1)\n",
     "    array2 = list(unsorted_array2)\n",
-    "    array3 = list(unsorted_array3)    "
+    "    array3 = list(unsorted_array3)    \n",
+    "    print()\n",
+    "    print(\"BUBBLE SORT\")\n",
+    "    print(f\"Unsorted array1 : {unsorted_array1}\")\n",
+    "    print(f\"Sorted : {bubbleSort(array1)}\")\n",
+    "    print(f\"Unsorted array2 : {unsorted_array2}\")\n",
+    "    print(f\"Sorted : {bubbleSort(array2)}\")\n",
+    "    print(f\"Unsorted array3 : {unsorted_array3}\")\n",
+    "    print(f\"Sorted : {bubbleSort(array3)}\")"
    ]
   },
   {
@@ -230,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -254,6 +278,14 @@
       "Unsorted array2 : (4, 3, 4, 0, 1, 6, 7, 1, 2, 9, 4, 2, 3, 0, 4, 9, 3, 2, 5, 8)\n",
       "Sorted : [0, 0, 1, 1, 2, 2, 2, 3, 3, 3, 4, 4, 4, 4, 5, 6, 7, 8, 9, 9]\n",
       "Unsorted array3 : (9, 5, 4, 2, 7, 3, 0, 4, 5, 3, 4, 3, 1, 2, 3, 1, 7, 9, 4, 1)\n",
+      "Sorted : [0, 1, 1, 1, 2, 2, 3, 3, 3, 3, 4, 4, 4, 4, 5, 5, 7, 7, 9, 9]\n",
+      "\n",
+      "BUBBLE SORT\n",
+      "Unsorted array1 : (6, 0, 6, 3, 4, 3, 2, 5, 2, 0, 0, 6, 5, 9, 2, 1, 6, 0, 5, 5)\n",
+      "Sorted : [0, 0, 0, 0, 1, 2, 2, 2, 3, 3, 4, 5, 5, 5, 5, 6, 6, 6, 6, 9]\n",
+      "Unsorted array2 : (4, 3, 4, 0, 1, 6, 7, 1, 2, 9, 4, 2, 3, 0, 4, 9, 3, 2, 5, 8)\n",
+      "Sorted : [0, 0, 1, 1, 2, 2, 2, 3, 3, 3, 4, 4, 4, 4, 5, 6, 7, 8, 9, 9]\n",
+      "Unsorted array3 : (9, 5, 4, 2, 7, 3, 0, 4, 5, 3, 4, 3, 1, 2, 3, 1, 7, 9, 4, 1)\n",
       "Sorted : [0, 1, 1, 1, 2, 2, 3, 3, 3, 3, 4, 4, 4, 4, 5, 5, 7, 7, 9, 9]\n"
      ]
     }
@@ -266,7 +298,8 @@
     "print()\n",
     "\n",
     "shellSortResults()\n",
-    "mergeSortResults()\n"
+    "mergeSortResults()\n",
+    "bubbleSortResults()\n"
    ]
   },
   {
@@ -282,7 +315,8 @@
    "source": [
     "1. Rathore, A. S. (2023, January 22). Sorting algorithms — with Python - towards data science. Medium. https://towardsdatascience.com/sorting-algorithms-with-python-4ec7081d78a1 \n",
     "2. GfG. (2023, January 10). ShellSort. GeeksforGeeks. https://www.geeksforgeeks.org/shellsort/ \n",
-    "3. GfG. (2023, March 30). Introduction to sorting techniques data structure and algorithm tutorials. GeeksforGeeks. https://www.geeksforgeeks.org/introduction-to-sorting-algorithm/ "
+    "3. GfG. (2023, March 30). Introduction to sorting techniques data structure and algorithm tutorials. GeeksforGeeks. https://www.geeksforgeeks.org/introduction-to-sorting-algorithm/ \n",
+    "4. Python, R. (2023, November 27). Sorting algorithms in Python. https://realpython.com/sorting-algorithms-python/"
    ]
   }
  ],
