--- a/Practicum_3.1_Opdrachten.ipynb
+++ b/Practicum_3.1_Opdrachten.ipynb
@@ -140,6 +140,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "###### Eigen implementatie "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Merge sort"
    ]
   },
